src/objects/Apttus_Config2__TempRenewAssetLineItem__c.object
<CustomObject>
    <description>Temporary object to store renew asset line item processed by RenewOpportunityJob</description>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated asset line item</description>
        <inlineHelpText>ID of the associated asset line item</inlineHelpText>
        <label>Asset Line Item</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Temp Renew Asset Line Items</relationshipLabel>
        <relationshipName>TempRenewAssetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Error__c</fullName>
        <description>The error message</description>
        <inlineHelpText>The error message</inlineHelpText>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewAssetGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated renew group</description>
        <inlineHelpText>ID of the associated renew group</inlineHelpText>
        <label>Renew Asset Group</label>
        <referenceTo>Apttus_Config2__TempRenewAssetGroup__c</referenceTo>
        <relationshipLabel>Temp Renew Asset Line Items</relationshipLabel>
        <relationshipName>TempRenewAssetLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The asset renewal status</description>
        <inlineHelpText>The asset renewal status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Temp Renew Asset Line Item</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Renew Asset Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>